--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <section class="container py-3" style="height: 100vh; width: 100vw;">
         <div class="d-flex justify-content-center align-content-center">
-            <a href="wonettFormation.html" class="btn btn-primary mx-2">Wonett</a>
-            <a href="qualiopy.html" class="btn btn-primary ms-2">Qualiopy</a>
-            <a href="ipsum.html" class="btn btn-primary ms-2">ipsum</a>
+            <a href="#" class="btn btn-primary mx-2">Wonett</a>
+            <a href="#" class="btn btn-primary ms-2">Qualiopy</a>
+            <a href="./assets/components/ipsum.html" class="btn btn-primary ms-2">ipsum</a>
             <a class="btn btn-primary ms-2">Lorem</a>
         </div>
     </section>
