--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="d-flex justify-content-center align-content-center">
             <a href="#" class="btn btn-primary mx-2">Wonett</a>
             <a href="#" class="btn btn-primary ms-2">Qualiopy</a>
-            <a href="./assets/components/ipsum.html" class="btn btn-primary ms-2">ipsum</a>
+            <a href="./assets/components/N1_01.html" class="btn btn-primary ms-2">N1 01</a>
             <a class="btn btn-primary ms-2">Lorem</a>
         </div>
     </section>
